sumo/tests/sumo/output/e1/errors/file_false/detector.sumo
<?xml version="1.0"?>

<!-- generated on 09/14/07 12:59:21 by SUMO sumo Version 0.9.6
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>input_routes.rou.xml</route-files>
      <additional-files>input_additional.add.xml</additional-files>
   </input>

   <time>
      <begin>0</begin>
      <end>1000</end>
   </time>

   <processing>
      <no-duration-log>true</no-duration-log>
      <no-step-log>true</no-step-log>
   </processing>

</configuration>
-->

<detector>
</detector>
